# lsyncd

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  _config.yml  aclocal.m4  autogen.OSX-MacPort.sh  autogen.clean  autogen.old-OSX-MacPort.sh  autogen.sh  bin2carray.lua  config.h.in  configure  configure.ac  configure.in  core.c  default-direct.lua  default-rsync.lua  default-rsyncssh.lua  default.lua  distclean.sh  fanotify.c  flake.nix  fsevents-api-test.c  fsevents-api.c  fsevents-api.h  fsevents-bindapi.c  fsevents.c  index.html  index.md  (+14 more)
.github/workflows/: build.yaml
_data/: docs.yml
_layouts/: default.html  default3.html
alpine/: fix-realpath.patch
cmake/: FindLua.cmake
contrib/: check_lsyncd_fileupdated.sh  check_lsyncd_updatefile.sh  readme.check_lsyncd.txt
core/: README.md  core.c  feature.h  inotify.c  inotify.h  log.c  log.h  lsyncd.h  main.c  main.h  mci.c  mci.h  mem.c  mem.h  observe.c  observe.h  pipe.c  pipe.h  signal.c  signal.h  smem.c  smem.h  stdin.c  stdin.h  time.c  time.h  userobs.c  userobs.h  util.c  util.h
css/: main.css  syntax.css
debian/: README.Debian  changelog  control  copyright  lsyncd.docs  lsyncd.init  rules  watch
default/: default.lua  direct.lua  proto.lua  rsync.lua  rsyncssh.lua  signal.lua
doc/: lsyncd.1  lsyncd.1.txt  manpage.lsyncd.conf.xml  manpage.lsyncd.xml
doc/manpage/: lsyncd.1  lsyncd.1.txt
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/appendices/devdocs/: index.md
docs/download/: index.md
docs/faq/nothing-after-startup/: index.md
docs/faq/postscript/: index.md
docs/help/: index.md
docs/manpage/: lsyncd.1  lsyncd.1.txt
docs/manual/building/: index.md
docs/manual/config/file/: index.md
docs/manual/config/layer1/: index.md
docs/manual/config/layer3/: index.md
docs/manual/config/layer4/: index.md
docs/manual/examples/: index.md
docs/manual/examples/auto-image-magic/: index.md
docs/manual/invoking/: index.md
download/: index.md
examples/: lalarm.lua  lbash.lua  lecho.lua  lftp.lua  lgforce.lua  limagemagic.lua  lpostcmd.lua  lrssh.lua  lrsync-advanced-tunnel.lua  lrsync.lua  lrsyncssh-advanced.lua  lrsyncssh-tunnel.lua  lrsyncssh.lua  ls3.lua  lsayirc.lua  lsyncd-csync2.conf.lua
faq/: index.md
faq/multiple-targets/: index.md
faq/nothing-after-startup/: index.md
faq/postscript/: index.md
m4/: ax_subst_l.m4
mantle/: READE.md  array.lua  combiner.lua  counter.lua  delay.lua  filter.lua  fwriter.lua  inlet.lua  inotify.lua  lock.lua  lsyncd.lua  mci.lua  monitor.lua  queue.lua  signal.lua  status.lua  statusfile.lua  string.lua  sync.lua  syncmaster.lua  user.lua  useralarm.lua  userenv.lua  version.lua  wrapup.lua
manual/building/: index.md
manual/compiling/: index.md
manual/config/file/: index.md
manual/config/layer1/: index.md
manual/config/layer2/: index.md
manual/config/layer3/: index.md
manual/config/layer4/: index.md
manual/examples/auto-image-magic/: .index.md.swp  index.md
manual/examples/gforce/: index.md
manual/invoking/: index.md
manual3/building/: index.md
manual3/config/file/: index.md
manual3/config/layer1/: index.md
manual3/config/layer2/: index.md
manual3/config/layer3/: index.md
manual3/config/layer4/: index.md
manual3/examples/: index.md
manual3/examples/auto-image-magic/: index.md
manual3/examples/gforce/: index.md
manual3/invoking/: index.md
osxstuff/: config.h  defaults.c  makefile  runner.c
systemd/: lsyncd.service
tests/: churn-direct.lua  churn-rsync.lua  churn-rsyncssh.lua  ci-run.sh  cron-rsync.lua  directorycpr.sh  directorymv.sh  exclude-rsync.lua  exclude-rsyncssh.lua  exclude.lua  filter-rsync.lua  flush-queue-sigterm.sh  help.sh  l4-rsync-data.sh  l4rsyncdata.lua  pidfile.sh  rand.lua  randomrsync.lua  randrsync.lua  schedule.lua  setup.lua  teardown.lua  test_actions.sh  testlib.lua  utils_test.lua  version.sh  wrong-logfile.sh  wrong-rsync.sh
trunk/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  fanotify-syscall.h  fsevents.c  inotify-nosys.h  inotify.c  lsyncd.c  lsyncd.conf.xml  lsyncd.lua
trunk/doc/: manpage.lsyncd.xml
trunk/examples/: limagemagic.lua  lpostcmd.lua  lrsync.lua
trunk/tests/: churn-direct.lua  churn-rsync.lua  churn-rsyncssh.lua  directorycpr0.sh  directorymv.sh  exclude-rsync.lua  exclude-rsyncssh.lua  help.sh  l4rsyncdata.lua  schedule.lua
