AC_INIT(lsyncd.c)
m4_define(LSYNCD_PACKAGE,lsyncd)
m4_define(LSYNCD_VERSION,1.0)
AM_INIT_AUTOMAKE(LSYNCD_PACKAGE,LSYNCD_VERSION)

AC_ARG_ENABLE([xml_config],
[  --enable-xml-config    Lsyncd is able to parse lsyncd.conf files (default: enabled)],
[case "${enableval}" in
  yes) xml_config=true ;;
  no)  xml_config=false ;;
  *) AC_MSG_ERROR([bad value ${enableval} for --enable-xml-config]) ;;
esac],[xml_config=true])
AM_CONDITIONAL(XML_CONFIG,[test x$xml_config = xtrue])


AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_HEADERS([sys/inotify.h])

AC_CONFIG_HEADERS([config.h])

AC_OUTPUT(Makefile)

